<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.admin.AdminActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:drawablePadding="8dp"
        android:drawableEnd="@drawable/ic_logout"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNo"
        android:layout_width="wrap_content"
        style="@style/Widget.User.Header"
        android:text="@string/no"
        app:layout_constraintEnd_toStartOf="@+id/tvEmail"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/btnLogout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        style="@style/Widget.User.Header"
        android:layout_below="@+id/tvNo"
        android:layout_marginStart="@dimen/margin_between_elements"
        android:text="@string/email"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/tvUserName"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/tvNo"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@id/btnLogout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUserName"
        style="@style/Widget.User.Header"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:text="@string/username"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/tvRole"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/tvEmail"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@id/btnLogout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRole"
        style="@style/Widget.User.Header"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:text="@string/role"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/tvUserName"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@id/btnLogout" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_marginTop="@dimen/margin_between_elements"
        app:layout_constraintBottom_toTopOf="@+id/rvUsers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUsers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_list_user" />

</androidx.constraintlayout.widget.ConstraintLayout>